# sanitaizer_example

./: CMakeLists.txt  README.MD
app/: CMakeLists.txt  main.cpp
include/lib_a/: lib_a.hpp
include/lib_b/: lib_b.hpp
src/lib_a/: CMakeLists.txt
src/lib_b/: CMakeLists.txt  lib_b.cpp
