#---------------------SET COMPONENT NAME---------------------------------------#
set(LIB_NAME ICOL.example.sanitaizer.lib_a)
#------------------------------------------------------------------------------#
#---------------------SET LOCAL NAME TO LINK COMPONENT-------------------------#
set(CMAKE_CXX_STANDARD 20)
#------------------------------------------------------------------------------#
#---------------------SET PROTO FILE-------------------------------------------#
#------------------------------------------------------------------------------#
#-----------------------INCLUDE HEADER-----------------------------------------#
set(LIB_PATH ${PROJECT_SOURCE_DIR}/include/lib_a)
set(HEADERS ${LIB_PATH}/lib_a.hpp)
#------------------------------------------------------------------------------#
#---------------------FIND PACKAGES--------------------------------------------#
find_package(Threads REQUIRED)
#------------------------------------------------------------------------------#
#---------------------GENERATE AUTOCODE----------------------------------------#
#------------------------------------------------------------------------------#
#---------------------COMPILE DEFINES------------------------------------------#
add_definitions(-fcoroutines)
add_definitions(-fno-exceptions)
add_definitions(-fexceptions)
#------------------------------------------------------------------------------#
#---------------------ADD SOURCE-----------------------------------------------#
set(SOURCE  lib_a.cpp)
#------------------------------------------------------------------------------#
#---------------------ADD LIBRARY----------------------------------------------#
add_library(${LIB_NAME} SHARED
        ${SOURCE}
        ${HEADERS})
#------------------------------------------------------------------------------#
#--------------------INCLUDE DIRS----------------------------------------------#
target_include_directories(${LIB_NAME} PUBLIC
        ${PROJECT_SOURCE_DIR}/include)
#---------------------LINK COMPONENTS------------------------------------------#
#------------------------------------------------------------------------------#
#--------------------------REQUIRED STD----------------------------------------#
target_compile_features(${LIB_NAME} PUBLIC cxx_std_20)
#------------------------------------------------------------------------------#
#-----------------------------CMAKE BUILD--------------------------------------#
source_group(TREE "${PROJECT_SOURCE_DIR}/include/lib_a"
        PREFIX "Header Files"
        FILES ${HEADERS})
#------------------------------------------------------------------------------#
#---------------------------PVS STUDIO ANALYZE---------------------------------#
#------------------------------------------------------------------------------#
